z-index fix

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ html { overflow-x: clip; }
     display: none;
     position: absolute;
     right: 0px;
-    z-index:1;
+    z-index:0;
 }
   
 .dropdown:hover .dropdown-content {
